[package]
name = "sol0x_nosystem"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[dependencies]
solana-sdk = "2.0.8"
reqwest="0.11"
serde_json = "1.0.127"
jupiter-swap-api-client = { git = "https://github.com/0xNoSystem/jupiter-api-rust-example.git", branch="main" }
tokio = { version = "1.40.0", features = ["full"] }